# tts-fap

./: README.md  pyproject.toml
app/: __main__.py  main_screen.py  speech_state.py
app/providers/: __init__.py  provider.py  sapi.py
